How To Improve Your Remote Work Experience And Increase Productivity

--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                                 <li><a href="#"><i class="fa fa-clock-o"></i> 2 April</a></li>
                                 <li><a href="#"><i class="fa fa-comments-o"></i> 2 Comments</a></li>
                             </ul>
-                            <h4 class="title"><a href="#">Launch New Mobile App Marketing Pitfalls To Avoid</a></h4>
+                            <h4 class="title"><a href="#">How AI Can Increase Productivity & Profitability Across All Marketing Channels</a></h4>
                             <a href="#"><i class="flaticon-right"></i></a>
                         </div>
                     </div>
