added download links

--- a/index.html
+++ b/index.html
@@ -134,12 +134,13 @@
                                     </ul>
                                 </div> <!-- navbar collapse -->
                                 <!-- <div class="navbar-btn d-none d-sm-flex">
-                                    <a class="main-btn" href="#">Download App</a>
+                                    <a class="main-btn" href="https://apps.apple.com/app/time-captn/id1614791767
+">Download App</a>
                                 </div> -->
                                 <!-- Download Buton -->
                                     <div class="navbar-btn d-none d-sm-flex">
                                     <!-- <button class="btn btn-dark app-button mb-3"><i class="fa fa-apple fa-2x"></i><span class="text-uppercase ml-2">Apple store</span></button> </div> -->
-                                    <a href="#" class="btn btn-store">
+                                    <a href="https://apps.apple.com/app/time-captn/id1614791767" class="btn btn-store">
                                         <span class="fa fa-apple fa-3x pull-left"></span> 
                                         <span class="btn-label">Download on the</span>
                                         <span class="btn-caption">App Store</span>
@@ -298,11 +299,12 @@
                             <li><i class="fa fa-check-circle"></i> Stay focused whenever, wherever.</li>
                             <br>
                         </ul>
-                        <!-- <a class="main-btn mt-50" href="#">Download from App Store</a> -->
+                        <!-- <a class="main-btn mt-50" href="https://apps.apple.com/app/time-captn/id1614791767
+">Download from App Store</a> -->
                                                         <!-- Download Buton -->
                                                         <div class="navbar-btn d-none d-sm-flex">
                                                             <!-- <button class="btn btn-dark app-button mb-3"><i class="fa fa-apple fa-2x"></i><span class="text-uppercase ml-2">Apple store</span></button> </div> -->
-                                                            <a href="#" class="btn btn-store">
+                                                            <a href="https://apps.apple.com/app/time-captn/id1614791767" class="btn btn-store">
                                                                 <span class="fa fa-apple fa-3x pull-left"></span> 
                                                                 <span class="btn-label">Download on the</span>
                                                                 <span class="btn-caption">App Store</span>
@@ -803,7 +805,7 @@
                             <p>Time Captain is a focus timer & habit management tool that helps you avoid burnout, stay focused and totally organized so you can easily manage your day-to-day tasks or todo lists</p>
                         </div>
                         <!-- <div class="link">
-                            <a class="main-btn" href="#">Download from App Store</a>
+                            <a class="main-btn" href="https://apps.apple.com/app/time-captn/id1614791767">Download from App Store</a>
                         </div> -->
                                                                                 <!-- Download Buton -->
                                                                                 <div class="navbar-btn d-none d-sm-flex">
